# fcp-io

./: README.md  pyproject.toml
src/fcp_io/: fcpxml_io.py
